--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -341,6 +341,11 @@ body {
 }
 
 .orders-show-page {
+
+  .payment-buttons, .receive-button, .refund-button {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
   font-size: 12px;
   .vertical-middle {
     vertical-align: middle;
